--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -115,6 +115,7 @@
                             </label>
                             <input id="signinPassword" class="form-control" name="user[password]" type="password"/>
                         </div>
+                        <a href="/login/github">使用github登录</a>-->
 
                     </div>
                     <div class="modal-footer">
