--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -25,7 +25,7 @@ Created by yuzefeng on 14-10-17.
                         </label>
                         <input id="signinPassword" class="form-control" name="user[password]" type="password"/>
                     </div>
-                    <a  href="/login/github">使用github登录</a>
+                    <a  href="/login/github/callback">使用github登录</a>
 
                 </div>
                 <div class="modal-footer">
