--- a/app/views/search.ejs
+++ b/app/views/search.ejs
@@ -1,6 +1,6 @@
 <%- include header %>
 <dl class="archive dl-horizontal">
-    <p>与您所搜索的关键词<strong><%= keyword %></strong>相关结果:</p>
+    <p>与您所搜索的关键词<strong><%= keyword %></strong>相关结果有:<span class="badge"><%= posts.length %></span>个</p>
     <% posts.forEach(function (post, index) { %>
     <dt>
         <time><%= moment(post.meta.updateAt).format('MM/DD/YYYY')%></time>
@@ -11,19 +11,5 @@
     <%})%>
 </dl>
 
-
-<ul class="list-group">
-
-    <li class="list-group-item">
-        <span class="badge pull-left"><%= posts.length %></span>
-        与您所搜索的关键词<strong><%= keyword %></strong>相关结果有个:
-    </li>
-    <% posts.forEach(function (post, index) { %>
-    <li class="list-group-item">
-        <h4 class="list-group-item-heading"><time><%= moment(post.meta.updateAt).format('MM/DD/YYYY')%></time></h4>
-        <p class="list-group-item-text"><a href="/post/<%= post._id %>"><%= post.title %></a></p>
-    </li>
-    <%})%>
-</ul>
 
 <%- include footer %>
