finish the zhuanzai and fix the tags not dup in the post save

--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -60,8 +60,8 @@
         }
     }
     function checkNotDup(tags){
-        var warms = "列表框的值不能一样";
-        switch(value) {
+        var warms = "您所填写的标签有重复，请修改";
+        switch(tags) {
             case 1:
                 if($('.tagOne').attr("value") === $('.tagTwo').attr("value") ||$('.tagOne').attr("value") === $('.tagThree').attr("value"))
 
