--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="yuzefeng">
     <title>the node of yuzefeng</title>
-    <link rel="icon" href="">
+    <link rel="icon" href="/images/getface.jpeg">
 
 
 
