finish the zhuanzai and fix the tags not dup in the post save

--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -73,7 +73,7 @@
                     return warn;
                 break;
             case 3:
-                if($('.tagTwo').attr("value") === $('.tagThree').attr("value") || $$('.tagOne').attr("value") === $('.tagThree').attr("value"))
+                if($('.tagTwo').attr("value") === $('.tagThree').attr("value") || $('.tagOne').attr("value") === $('.tagThree').attr("value"))
                     return warn;
                 break;
         }
