finish the zhuanzai and fix the tags not dup in the post save

--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -27,6 +27,7 @@
 
 
     $(document).ready(function(){
+
         $(".nav li a").click(function(){
             $(this).parent().siblings().removeClass("active");
             $(this).parent().addClass("active");
@@ -35,6 +36,21 @@
             if($($(this))[0].href==String(window.location))
                 $(this).parent().addClass('active');
         });
+
+        $('.tags').blur(function(){
+            var warn = "您所填写的标签有重复，请修改";
+            if($('.tagOne').attr("value") === $('.tagTwo').attr("value") ||$('.tagOne').attr("value") === $('.tagThree').attr("value")) {
+                return warn;
+            }
+            else if($('.tagTwo').attr("value") === $('.tagThree').attr("value") || $('.tagOne').attr("value") === $('.tagTwo').attr("value")) {
+                return warn;
+            }
+            else if($('.tagTwo').attr("value") === $('.tagThree').attr("value") || $('.tagOne').attr("value") === $('.tagThree').attr("value")) {
+                return warn;
+            }
+
+
+
     });
 
     tinymce.init({
@@ -60,25 +76,7 @@
         }
     }
 
-    function checkNotDup(tags){
-        var warn = "您所填写的标签有重复，请修改";
-        switch(tags) {
-            case 1:
-                if($('.tagOne').attr("value") === $('.tagTwo').attr("value") ||$('.tagOne').attr("value") === $('.tagThree').attr("value"))
 
-                    return warn;
-                break;
-            case 2:
-                if($('.tagTwo').attr("value") === $('.tagThree').attr("value") || $('.tagOne').attr("value") === $('.tagTwo').attr("value"))
-                    return warn;
-                break;
-            case 3:
-                if($('.tagTwo').attr("value") === $('.tagThree').attr("value") || $('.tagOne').attr("value") === $('.tagThree').attr("value"))
-                    return warn;
-                break;
-        }
-
-    }
 
 
 
