--- a/app/views/post.ejs
+++ b/app/views/post.ejs
@@ -16,13 +16,13 @@
     <div class="row">
         <h4>标签：</h4>
         <div class="col-xs-2">
-            <input type="text" name="post[tags]" class="form-control tagOne" placeholder="tag1 input" id="" required oninput="checkNotDup(1)"/>
+            <input type="text" name="post[tags]" class="form-control tagOne tags" placeholder="tag1 input" id="" required />
         </div>
         <div class="col-xs-2">
-            <input type="text" name="post[tags]" class="form-control tagTwo" placeholder="tag2 input" id="" required oninput="checkNotDup(2)"/>
+            <input type="text" name="post[tags]" class="form-control tagTwo tags" placeholder="tag2 input" id="" required />
         </div>
         <div class="col-xs-2">
-            <input type="text" name="post[tags]" class="form-control tagThree" placeholder="tag3 input" id="" required oninput="checkNotDup(3)"/>
+            <input type="text" name="post[tags]" class="form-control tagThree tags" placeholder="tag3 input" id="" required />
         </div>
 
 
