--- a/app/views/post.ejs
+++ b/app/views/post.ejs
@@ -30,7 +30,7 @@
 
     <div class="row">
         <h4>正文：</h4>
-        <div class="col-xs-9">
+        <div class="col-sm-9">
 
             <textarea name="post[post]" id="editor_text" cols="50" rows="20" style="width:100%" ></textarea>
         </div>
