--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include header %>
+<div><a class="top" id="returnTop"></a></div>
 <div class="container">
 <div class="row">
     <div class="col-sm-8 blog-main">
