--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -21,7 +21,9 @@
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
+
 <script src="/javascripts/footer.js"></script>
+<script src="/javascripts/stickUp.min.js"></script>
 
 
 
