let the returntop display in block

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -45,7 +45,7 @@
             <h4>关于</h4>
             <p>鄙人 <em>余泽锋</em><a href="https://github.com/zeffon">zeffon</a> 作为一名广东二本狗，毕业三年之后恍然大悟，被nodejs深深吸引。这是鄙人基于nodejs的博客，一步一步建设起来真不容易，参考赵坤赵大神的n-blog，非常感谢他，在茫茫网海中及时地遇到他的github，实属大幸。</p>
         </div>
-        <div><a href="#" id="returnTop" class="btn"><span class="glyphicon glyphicon-chevron-up"></span></a></div>
+        <div id="returnTop"><a href="#"  class="btn"><span class="glyphicon glyphicon-chevron-up"></span></a></div>
 
     </div>
 </div>
