--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -17,7 +17,11 @@
 
 </div>
 </div>
-
+<div style="display:none;" class="back-to" id="returnTop">
+    <a title="returnTop" onclick="window.scrollTo(0,0);return false;" href="#" class="back-top">
+    <span class="glyphicon glyphicon-chevron-up"></span></a>
+</div>
+<!--<div id="returnTop"><a href="#"  class="btn"><span class="glyphicon glyphicon-chevron-up"></span></a></div>-->
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
