--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -204,37 +204,11 @@ h6, .h6 {
 
 a{text-decoration:none;}
 
-
-/*return top*/
-p#back-to-top{
+#returnTop{
     position:fixed;
-    bottom:100px;
-    left:80px;
-}
-p#back-to-top a{
-    text-align:center;
-    text-decoration:none;
-    color:#d1d1d1;
-    display:block;
-    width:80px;
-    /*使用CSS3中的transition属性给跳转链接中的文字添加渐变效果*/
-    -moz-transition:color 1s;
-    -webkit-transition:color 1s;
-    -o-transition:color 1s;
-}
-p#back-to-top a:hover{
-    color:#979797;
-}
-p#back-to-top a span{
-    border-radius:6px;
-    display:block;
-    height:80px;
-    width:80px;
-    margin-bottom:5px;
-    /*使用CSS3中的transition属性给<span>标签背景颜色添加渐变效果*/
-    -moz-transition:background 1s;
-    -webkit-transition:background 1s;
-    -o-transition:background 1s;
-}
-#back-to-top a:hover span{
+    right:0;
+    bottom:0;
+    border:1px solid white;
+    width:300px;
+    height:250px;
 }
