fix the footer and write the new width and height of the returnTop1.2

--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -210,5 +210,10 @@ a{text-decoration:none;}
     bottom:0;
     border:1px solid #eee;
     width:50px;
-    height:55px;
+    height:50px;
+}
+#returnTop>span{
+    display: block;
+    width:50px;
+    height:50px;
 }
