--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -18,7 +18,7 @@
 </div>
 </div>
 <div style="display:none;" class="back-to" id="returnTop">
-    <a title="returnTop" onclick="window.scrollTo(0,0);return false;" href="#" class="back-top">
+    <a title="returnTop" onclick="window.scrollTo(0,0);return false;" href="#" class="backTop">
     <span class="glyphicon glyphicon-chevron-up"></span></a>
 </div>
 <!--<div id="returnTop"><a href="#"  class="btn"><span class="glyphicon glyphicon-chevron-up"></span></a></div>-->
