--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -213,6 +213,7 @@ a{text-decoration:none;}
     height:50px;
 }
 #returnTop>span{
+    vertical-align:50%;
     display: block;
     width:50px;
     height:50px;
