--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -212,8 +212,8 @@ a{text-decoration:none;}
     width:50px;
     height:50px;
 }
-#returnTop>span{
-    vertical-align:50%;
+#returnTop>a{
+
     display: block;
     width:50px;
     height:50px;
