--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -213,7 +213,11 @@ a{text-decoration:none;}
     height:50px;
 }
 #returnTop>a{
-
+    display: block;
+    width:50px;
+    height:50px;
+}
+#returnTop>a>span{
     display: block;
     width:50px;
     height:50px;
