--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -218,6 +218,8 @@ a{text-decoration:none;}
     height:50px;
 }
 #returnTop>a>span{
+    text-align: center;
+    line-height: 50px;
     display: block;
     width:50px;
     height:50px;
