fix the meta of the header

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="yuzefeng">
-    <title>the node of yuzefeng</title>
+    <meta name="description" content="a simple blog which bases on the nodejs by zeffon">
+    <meta name="author" content="zeffon">
+    <title>the node of zeffon</title>
     <link rel="icon" href="/images/getface.jpeg">
 
 
@@ -29,7 +29,7 @@
         <div class="container" >
             <div class="navbar-header">
 
-                <a class="navbar-brand" href="/">node life</a>
+                <a class="navbar-brand" href="/">zeffon's node blog </a>
             </div>
 
             <div class="navbar-collapse collapse" >
