--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -55,9 +55,9 @@
             <h4>标签</h4>
             <% if( tags && tags.length>0 ){%>
             <% tags.forEach(function (tag, index) { %>
-            <h5>
-                <a class="tag label label-primary"  href="/tags/<%= tag %>"><%= tag %></a>
-            </h5>
+
+            <a class="tag label label-primary"  href="/tags/<%= tag %>"><span><%= tag %></span></a>
+
 
             <% }) %>
             <% } %>
