fix the tags in the index 1.5 fix the tags in the span

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -56,7 +56,7 @@
             <% if( tags && tags.length>0 ){%>
             <% tags.forEach(function (tag, index) { %>
 
-            <a class="tag label label-primary"  href="/tags/<%= tag %>"><span><%= tag %></span></a>
+            <a class="tagSpan label label-primary"  href="/tags/<%= tag %>"><span><%= tag %></span></a>
 
 
             <% }) %>
