--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -53,8 +53,8 @@
                         <li><a title="发表" href="/admin/post/new">发表文章</a></li>
                         <li><a title="登出" href="/logout">登出</a></li>
                     <%}else{%>
-                        <li><a title="登录" href="/login" data-toggle="modal" data-target="#signinModal">登录</a></li>
-                        <li><a title="注册" href="/reg" data-toggle="modal" data-target="#signupModal">注册</a></li>
+                        <!--<li><a title="登录" href="/login" data-toggle="modal" data-target="#signinModal">登录</a></li>
+                        <li><a title="注册" href="/reg" data-toggle="modal" data-target="#signupModal">注册</a></li>-->
                     <%}%>
 
 
