add the size of the post in the index

--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -227,3 +227,8 @@ a{text-decoration:none;}
 .tagspan{
     margin-top:25px;
 }
+.ownPost{
+    width:647px;
+    height:647px;
+    background-color: #eee;
+}
