add the size of the post in the index

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,7 +4,7 @@
 <div class="container">
 <div class="row">
     <div class="col-sm-8 blog-main">
-        <div class="blog-post ownPost">
+        <div class="blog-post " style="width:647px;height:647px;background-color: #eee;">
             <% if(posts){%>
                 <% posts.forEach(function (post, index) { %>
                     <p>
