add the size of the post in the index

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,7 +4,7 @@
 <div class="container">
 <div class="row">
     <div class="col-sm-8 blog-main">
-        <div class="blog-post " style="width:647px;height:647px;background-color: #eee;">
+        <div class="blog-post " >
             <% if(posts){%>
                 <% posts.forEach(function (post, index) { %>
                     <p>
@@ -12,7 +12,7 @@
                     <!--
                         <a href="/u/<%= post.name %>"><img src="<%= post.head %>" class="r_head" /></a>
                     </p>-->
-                    <p class="blog-post-meta">
+                    <p class="blog-post-meta" >
                         作者：<a href="/u/<%= post.name%>"><%= post.name %></a> |
                         日期：<%= moment(post.meta.updateAt).format('MM/DD/YYYY')%>
                         <% if ( post.reprint_info && post.reprint_info.reprint_from ){ %>
@@ -26,7 +26,7 @@
 
                     </p>
 
-                <p><%- post.post %></p>
+                <p style="width:647px;height:647px;background-color: #eee;"><%- post.post %></p>
 
 
             <div class="info">
