--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,7 +8,7 @@
 
                 <% if(posts){%>
                 <% posts.forEach(function (post, index) { %>
-                <div style="width:647px;height:647px;background-color: #eee;">
+                <div class="indexpost" >
                 <p>
                 <h2 class="blog-post-title" ><a href="/post/<%= post._id %>" style="text-decoration:none;"><%= post.title %></a></h2>
                 <!--
