remove the size of the post in the index

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -41,7 +41,7 @@
                     <strong ><%= 0 %></strong>
                     <% } %>
                 </span>
-
+                </div>
 
                 <% }); %>
                 <%}%>
