change the post from p to div

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -28,7 +28,7 @@
 
                 </p>
 
-                <p class="blog-description"><%- post.post %></p>
+                <div class="blog-description"><%- post.post %></div>
 
 
                 <div class="info">
