--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -116,12 +116,14 @@ h6, .h6 {
 .blog-title {
     margin-top: 30px;
     margin-bottom: 0;
-    font-size: 60px;
+    font-size: 45px;
     font-weight: normal;
 }
 .blog-description {
-    font-size: 20px;
+    font-size: 15px;
     color: #999;
+    height:180px;
+    overflow: hidden;
 }
 
 
@@ -132,12 +134,14 @@ h6, .h6 {
 .blog-main {
     font-size: 18px;
     line-height: 1.5;
+    height:100%;
 }
 
 /* Sidebar modules for boxing content */
 .sidebar-module {
     padding: 15px;
     margin: 0 -15px 15px;
+
 }
 .sidebar-module-inset {
     padding: 15px;
