--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -175,10 +175,11 @@ h6, .h6 {
 
 .blog-post {
     margin-bottom: 60px;
+    background-color: #eee;
 }
 .blog-post-title {
     margin-bottom: 5px;
-    font-size: 40px;
+    font-size: 30px;
 }
 .blog-post-meta {
     margin-bottom: 20px;
