change the css oh the index of the blog-post 1.1---change the color of the  post-discription

--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -124,6 +124,7 @@ h6, .h6 {
     color: #999;
     height:180px;
     overflow: hidden;
+    background-color: #F5F5F5;
 }
 
 
@@ -175,7 +176,7 @@ h6, .h6 {
 
 .blog-post {
     margin-bottom: 60px;
-    background-color: #eee;
+
 }
 .blog-post-title {
     margin-bottom: 5px;
