change the css oh the index of the blog-post 1.2.1---add the share

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -12,6 +12,7 @@
 
 
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://saw.caifutang.com/jquery.hooray/jquery.HooRay/jquery.HooRay.css" />
     <link rel="stylesheet" href="/stylesheets/bootstrap-theme.css" />
     <link rel="stylesheet" href="/stylesheets/style2.css" />
 
