--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -40,6 +40,14 @@
                     <strong ><%= 0 %></strong>
                     <% } %>
                 </span>
+                    <span><p class="hoorayshare">
+                            <a class="hr-share-tsina"></a>
+                            <a class="hr-share-tqq"></a>
+                            <a class="hr-share-qzone"></a>
+                            <a class="hr-share-baidu"></a>
+                            <a class="hr-share-douban"></a>
+                            <a class="hr-share-more"></a>
+                        </p></span>
                 </div>
 
 
