--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
+<script src="http://saw.caifutang.com/jquery.hooray/jquery.HooRay/jquery.HooRay.js"></script>
 
 <script src="/javascripts/footer.js"></script>
 
