--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -136,6 +136,7 @@ h6, .h6 {
     font-size: 18px;
     line-height: 1.5;
     height:100%;
+    background-color: #f5f5f5;
 }
 
 /* Sidebar modules for boxing content */
