--- a/app/views/comment.ejs
+++ b/app/views/comment.ejs
@@ -13,10 +13,10 @@
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
-<% if (!index && post.comments && config.duoshuo_shortname){ %>
+<% if (config.duoshuo_shortname){ %>
 <section id="comments">
     <!-- 多说评论框 start -->
-    <div class="ds-thread" data-thread-key="<%= post.layout %>-<%= post.slug %>" data-title="<%= post.title %>" data-url="<%= page.permalink %>"></div>
+    <div class="ds-thread"  data-title="<%= post.title %>" data-url="<%= page.permalink %>"></div>
     <!-- 多说评论框 end -->
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
     <script type="text/javascript">
