add the duoshuo

--- a/app/views/article.ejs
+++ b/app/views/article.ejs
@@ -68,5 +68,10 @@
     </div>
 </div>
 
-<%- include comment %>
+<!--<%- //include comment %>-->
+
+<!-- 多说评论框 start -->
+<div class="ds-thread" data-thread-key="post._id" data-title="post.title" data-url="/post/<%= post._id %>"></div>
+<!-- 多说评论框 end -->
+
 <%- include footer %>
