add the github and email into the sidebar

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -60,7 +60,11 @@
         <div class="sidebar-module sidebar-module-inset">
             <h4>关于</h4>
             <img src="/images/getface.jpeg" alt="zeffon"/>
-            <p>鄙人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享网站。欢迎拍砖。</p>
+            <p>鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享网站。欢迎拍砖。</p>
+            <p><address>
+                <a href="https://github.com/zeffon">github:zeffon</a>
+                <a href="mailto:#">email:zephoony@gmail.com</a>
+            </address></p>
         </div>
         <div class="sidebar-module sidebar-module-inset">
             <h4>标签</h4>
