add the user\time\tags icons 1.1.2

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -63,7 +63,7 @@
         <div class="sidebar-module sidebar-module-inset">
             <h4>关于</h4>
             <img src="/images/getface.jpeg" alt="zeffon"/>
-            <p>鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享网站。欢迎拍砖。</p>
+            <p class="glyphicon glyphicon-tower">鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享网站。欢迎拍砖。</p>
             <p><address>
                 <span class="glyphicon glyphicon-envelope">zephoony@gmail.com</span>
             </address></p>
