--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -63,9 +63,9 @@
         <div class="sidebar-module sidebar-module-inset">
             <h4>关于</h4>
             <img src="/images/getface.jpeg" alt="zeffon"/>
-            <p class="glyphicon glyphicon-tower">鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享网站。欢迎拍砖。</p>
+            <p class="glyphicon glyphicon-tower">&nbsp鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享网站。欢迎拍砖。</p>
             <p><address>
-                <span class="glyphicon glyphicon-envelope">zephoony@gmail.com</span>
+                <span class="glyphicon glyphicon-envelope">&nbspzephoony@gmail.com</span>
             </address></p>
         </div>
         <div class="sidebar-module sidebar-module-inset">
