--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -116,12 +116,11 @@ h6, .h6 {
 .blog-title {
     margin-top: 30px;
     margin-bottom: 0;
-    font-size: 45px;
+    font-size: 20;
     font-weight: normal;
 }
 .blog-description {
-    font-size: 6px;
-    color: #999;
+    font-size: 6px;    color: #999;
     height:180px;
     overflow: hidden;
     background-color: #F8F8F8;
