--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -116,7 +116,7 @@ h6, .h6 {
 .blog-title {
     margin-top: 30px;
     margin-bottom: 0;
-    font-size: 20;
+    font-size: 15px;
     font-weight: normal;
 }
 .blog-description {
