--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,7 +25,7 @@
 
                     <span class="glyphicon glyphicon-tags"></span>
                     <% post.tags.forEach(function (tag,index) { %>
-                    <a class="tag btn btn-xs btn-info" href="/tags/<%= tag %>"><%= tag %></a>
+                    <a class="tag btn btn-sm btn-info" href="/tags/<%= tag %>"><%= tag %></a>
                     <% }) %>
 
                 </p>
@@ -43,14 +43,6 @@
                     <strong ><%= 0 %></strong>
                     <% } %>
                 </span>
-                    <span><p class="hoorayshare">
-                            <a class="hr-share-tsina"></a>
-                            <a class="hr-share-tqq"></a>
-                            <a class="hr-share-qzone"></a>
-                            <a class="hr-share-baidu"></a>
-                            <a class="hr-share-douban"></a>
-                            <a class="hr-share-more"></a>
-                        </p></span>
                 </div>
 
 
