change the font-size of post-title into 15px

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,7 +25,7 @@
 
                     <span class="glyphicon glyphicon-tags"></span>
                     <% post.tags.forEach(function (tag,index) { %>
-                    <a class="tag btn btn-sm btn-info" href="/tags/<%= tag %>"><%= tag %></a>
+                    <a class="tag btn btn-xs btn-info" href="/tags/<%= tag %>"><%= tag %></a>
                     <% }) %>
 
                 </p>
