add the comments pf the duoshuo into the indexejs

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -43,6 +43,7 @@
                     <strong ><%= 0 %></strong>
                     <% } %>
                 </span>
+                <span class="ds-thread-count" data-thread-key="<%= post._id %>" data-count-type="comments"></span>
                 </div>
 
 
