1.change the style of  comments pf the duoshuo into the indexejs 2.remove the reprint

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -36,14 +36,17 @@
                 <div class="info">
                     <span class="btn btn-xs btn-default" disabled="disabled">阅读： <strong><%= post.pv %></strong> </span>
                 <span class="btn btn-xs btn-default" disabled="disabled">
+                    <strong class="ds-thread-count" data-thread-key="<%= post._id %>" data-count-type="comments"></strong>
+                    <!--
                     转载：
                     <% if (post.reprint_info && post.reprint_info.reprint_to) { %>
                     <strong><%= post.reprint_info.reprint_to.length %></strong>
                     <% } else { %>
                     <strong ><%= 0 %></strong>
-                    <% } %>
+                    <% } %>-->
+
                 </span>
-                <span class="ds-thread-count" data-thread-key="<%= post._id %>" data-count-type="comments"></span>
+
                 </div>
 
 
