change the position of the references and change the color of the footerejs

--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -6,14 +6,12 @@
 
 <div class="blog-footer ">
 
-    <p>Thanks to  <a href="http://www.nodejs.org">nodejs</a> and <a href="http://www.bootcss.com">bootstrap</a>.</p>
-    <p>
-        I'm <a href="https://github.com/zeffon">zeffon</a>
-    </p>
-
-    <p>
-        <a href="#">Back to top</a>
-    </p>
+    <h4>关于</h4>
+    <img src="/images/getface.jpeg" alt="zeffon"/>
+    <p class="glyphicon glyphicon-tower">&nbsp鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享博客。欢迎拍砖。</p>
+    <p><address>
+        <span class="glyphicon glyphicon-envelope">&nbspzephoony@gmail.com</span>
+    </address></p>
 
 </div>
 </div>
