--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -56,14 +56,16 @@
         <%}%>
     </div>
     <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-        <div class="sidebar-module sidebar-module-inset">
+       <!-- <div class="sidebar-module sidebar-module-inset">
             <h4>关于</h4>
             <img src="/images/getface.jpeg" alt="zeffon"/>
             <p class="glyphicon glyphicon-tower">&nbsp鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享博客。欢迎拍砖。</p>
             <p><address>
                 <span class="glyphicon glyphicon-envelope">&nbspzephoony@gmail.com</span>
             </address></p>
-        </div>
+        </div>-->
+
+        <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=5&isTitle=1&noborder=0&isWeibo=1&isFans=0&uid=1656258047&verifier=ff5e8663&dpc=1"></iframe>
         <div class="sidebar-module sidebar-module-inset">
             <h4>标签</h4>
             <% if( tags && tags.length>0 ){%>
@@ -75,8 +77,6 @@
             <% }) %>
             <% } %>
         </div>
-        <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=10&isTitle=1&noborder=0&isWeibo=1&isFans=0&uid=1656258047&verifier=ff5e8663&dpc=1"></iframe>
-
     </div>
 </div>
 </div>
