add the githubcard

--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -8,6 +8,7 @@
 
     <h4>关于</h4>
     <img src="/images/getface.jpeg" alt="zeffon"/>
+    <br/>
     <p class="glyphicon glyphicon-tower">&nbsp鸟人 <a href="https://github.com/zeffon">zeffon</a> 一个关于javascript、nodejs的转载分享博客。欢迎拍砖。</p>
     <p><address>
         <span class="glyphicon glyphicon-envelope">&nbspzephoony@gmail.com</span>
@@ -22,7 +23,9 @@
 <!--<div id="returnTop"><a href="#"  class="btn"><span class="glyphicon glyphicon-chevron-up"></span></a></div>-->
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="http://lab.lepture.com/github-cards/widget.js"></script>
 <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
+
 
 <script src="/javascripts/footer.js"></script>
 
