--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -65,7 +65,10 @@
             </address></p>
         </div>-->
 
-        <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=5&isTitle=1&noborder=0&isWeibo=1&isFans=0&uid=1656258047&verifier=ff5e8663&dpc=1"></iframe>
+<!--sinaweibo-->
+        <!--<iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=5&isTitle=1&noborder=0&isWeibo=1&isFans=0&uid=1656258047&verifier=ff5e8663&dpc=1"></iframe>-->
+
+<!--myowngithub-->
         <div class="github-card" data-user="zeffon"></div>
         <div class="sidebar-module sidebar-module-inset">
             <h4>标签</h4>
