--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -141,7 +141,7 @@ h6, .h6 {
 /* Sidebar modules for boxing content */
 .sidebar-module {
     padding: 15px;
-    margin: 0 -15px 15px;
+    margin: 0 -15px 15px 0;
 
 }
 .sidebar-module-inset {
@@ -235,7 +235,4 @@ a{text-decoration:none;}
 .tagspan{
     margin-top:25px;
     font-size: 6px;
-}
-.myowngithub{
-    margin-left: -15px;
 }
