--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -5,41 +5,7 @@ body {
     padding-bottom: 40px;
     background-color: #eee;
 }
-body.ready {
-    width:225px;
-}
-.form-signin {
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-    margin-bottom: 10px;
-}
-.form-signin .checkbox {
-    font-weight: normal;
-}
-.form-signin .form-control {
-    position: relative;
-    height: auto;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 10px;
-    font-size: 16px;
-}
-.form-signin .form-control:focus {
-    z-index: 2;
-}
-.form-signin input[type="email"] {
-    /*margin-bottom: -1px;*/
-    /*border-bottom-right-radius: 0;*/
-    /*border-bottom-left-radius: 0;*/
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
+
 h1, .h1,
 h2, .h2,
 h3, .h3,
@@ -142,7 +108,7 @@ h6, .h6 {
 
 /* Sidebar modules for boxing content */
 .sidebar-module {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
     margin: 0 -15px 15px 0;
 
 }
