--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -108,8 +108,8 @@ h6, .h6 {
 
 /* Sidebar modules for boxing content */
 .sidebar-module {
-    padding: 15px 15px 0px 15px;
-    margin: 0 -15px 15px 0;
+    padding: 15px;
+    margin: 0 -15px 15px -15px;
 
 }
 .sidebar-module-inset {
