fix the githubcard 1.1.7

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -70,7 +70,7 @@
 
 <!--myowngithub-->
 
-        <div class="github-card myowngithub" data-user="zeffon"></div>
+        <div class="github-card " data-user="zeffon"></div>
 
         <div class="sidebar-module sidebar-module-inset">
             <h4>标签</h4>
