--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -116,6 +116,7 @@ h6, .h6 {
     padding: 15px;
     background-color: #f5f5f5;
     border-radius: 4px;
+    margin-left: 15px;
 }
 .sidebar-module-inset p:last-child,
 .sidebar-module-inset ul:last-child,
